--- a/src/components/Rules/Rules.module.css
+++ b/src/components/Rules/Rules.module.css
@@ -20,7 +20,7 @@
     padding: 55px 38px 35px 108px;
     width: 100vw;
     min-height: 100vh;
-    background-image: url('./assets/fr45-background.png');
+    background-image: url('../../assets/fr45-background.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
 
