--- a/src/components/AffiliateProgram/AffiliateProgram.module.css
+++ b/src/components/AffiliateProgram/AffiliateProgram.module.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Roboto;
+}
+
 @keyframes fade {
     0% {
         opacity: 0
@@ -19,7 +28,7 @@
 .wrapper{
     width: 100vw;
     min-height: 100vh;
-    background-image: url('./assets/fr47-background.png');
+    background-image: url('../../assets/fr47-background.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
