--- a/src/components/LevelStructure/LevelStructure.module.css
+++ b/src/components/LevelStructure/LevelStructure.module.css
@@ -1,4 +1,12 @@
-@import "./index.css";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Roboto;
+}
+
 
 @keyframes fade {
     0% {
@@ -38,7 +46,7 @@
 .wrapper{
     width: 100vw;
     min-height: 100vh;
-    background-image: url('./assets/fr49-background.png');
+    background-image: url('../../assets/fr49-background.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
