--- a/src/components/LevelStructure/LevelStructure.module.css
+++ b/src/components/LevelStructure/LevelStructure.module.css
@@ -70,3 +70,12 @@
     padding: 10px 30px;
     text-align: center;
 }
+.link {
+    width: 100%;
+    margin-top: 0.5rem;
+    text-align: center;
+}
+.link a {
+    color: black; 
+    text-decoration: none;
+}
