--- a/src/components/AffiliateProgram/AffiliateProgram.module.css
+++ b/src/components/AffiliateProgram/AffiliateProgram.module.css
@@ -32,7 +32,7 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding: 35px 2vw 31px 86px;
 
 }
@@ -46,7 +46,7 @@
     display: flex;
     flex-direction: column;
     min-height: calc(100vh - 35px - 31px);
-    align-items: end;    
+    align-items: flex-end;    
     justify-content: space-between;
     z-index: 2;
 }
@@ -66,7 +66,7 @@
     top: 46vh;
     left: 80vw;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 .words{
     display: flex;
