--- a/src/components/Costs/Costs.module.css
+++ b/src/components/Costs/Costs.module.css
@@ -89,7 +89,7 @@
     height: 72px;
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     padding: 16px 42px 20px 20px;
     border-radius: 13px;
     font-style: normal;
