--- a/src/components/LevelStructure/LevelStructure.module.css
+++ b/src/components/LevelStructure/LevelStructure.module.css
@@ -72,10 +72,11 @@
 }
 .link {
     width: 100%;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     text-align: center;
 }
 .link a {
-    color: black; 
-    text-decoration: none;
+    color: blue; 
+    font-size: 18px;
+    /* text-decoration: none; */
 }
