--- a/src/components/Rules/Rules.module.css
+++ b/src/components/Rules/Rules.module.css
@@ -26,7 +26,7 @@
 
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: flex-end;
 }
 .image-box{
     position: absolute;
@@ -47,7 +47,7 @@
     justify-content: space-between;
     min-height: calc(100vh - 55px - 35px);
     width: calc(100vw - 38px - 108px);
-    align-items: end;
+    align-items: flex-end;
     z-index: 2;
 }
 .column{
@@ -95,7 +95,7 @@
     padding: 0 31px 6px 48px;
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
 }
 fieldset {
     border: 8px solid #FFFFFF;
