--- a/src/components/LevelStructure/LevelStructure.module.css
+++ b/src/components/LevelStructure/LevelStructure.module.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: Roboto;
+    font-weight: 700;
 }
 
 
@@ -71,12 +72,10 @@
     text-align: center;
 }
 .link {
-    width: 100%;
     margin-top: 1rem;
     text-align: center;
-}
-.link a {
-    color: blue; 
-    font-size: 18px;
-    /* text-decoration: none; */
+    display: flex;
+    margin-top: 0.5rem;
+    align-self: center;
+    justify-content: center;
 }
